# Coursera

Machine Learning/Titanic/: titanic.py
Machine Learning/titanic_trees/: main.py
black_band/Week_1/1_domains_san/: CMakeLists.txt  main.cpp
black_band/Week_1/2_personal_budget_asan/: CMakeLists.txt  main.cpp
black_band/Week_1/3_transport_E_asan/: CMakeLists.txt  graph.h  main.cpp  router.h  transport_router.cpp
black_band/Week_1/4_overflow_sum/: CMakeLists.txt  main.cpp
black_band/Week_1/5_transport_F_SVG_library/: CMakeLists.txt  main.cpp  svg.cpp  svg.h
black_band/Week_1/6_transport_G_map/: CMakeLists.txt  graph.h  linker.h  manager.cpp  map.cpp  map.h  svg.cpp  svg.h
black_band/Week_1/7_transport_H_numbers/: CMakeLists.txt  coordinates.h  database.cpp  manager.cpp  manager.h  map.cpp  route.cpp
black_band/Week_1/8_transport_I_layers/: CMakeLists.txt  main.cpp  manager.h  map.h  request.cpp  svg.h
black_band/Week_2/1_JSON_printer/: CMakeLists.txt  main.cpp
black_band/Week_2/2_save_load/: CMakeLists.txt  main.cpp  saveload.h
black_band/Week_2/3_phonebook/: CMakeLists.txt  contact.pb.cc  contact.proto  main.cpp  phone_book.cpp  phone_book.h  test_runner.h
black_band/Week_2/4_yellow_pages/: CMakeLists.txt  merge.cpp  name.pb.h  provider.pb.cc  signal.pb.cc  signal.pb.h  url.pb.cc  url.pb.h  working_time.pb.cc  working_time.pb.h
black_band/Week_3/3_mython_interpretator/: CMakeLists.txt  comparators.cpp  lexer.cpp  lexer.h  main.cpp  object.cpp  object.h  object_holder.cpp  object_holder_test.cpp  statement.cpp  statement.h  test_runner.h
black_band/Week_3/4_transport_J/: CMakeLists.txt  coordinates.cpp  database.h  descriptions.cpp  descriptions.h  json.h  manager.cpp  map_renderer.cpp  request.h  route.h  sphere.h  sphere_projection.h  svg.cpp  utils.h
black_band/Week_3/6_transport_L/: CMakeLists.txt  descriptions.cpp  descriptions.h  graph.h  requests.h  sphere_projection.cpp  sphere_projection.h  svg.cpp
black_band/Week_3/7_transport_M/: CMakeLists.txt  main.cpp  map_renderer.cpp  router.h  sphere_projection.h  transport_router.cpp  transport_router.h
red_band/airline/: CMakeLists.txt  main.cpp
red_band/airline_2/: CMakeLists.txt  main.cpp
red_band/airport_counter/: CMakeLists.txt  main.cpp
red_band/bad_macros/: CMakeLists.txt  main.cpp
red_band/concurrent_map/: CMakeLists.txt  main.cpp
red_band/deque/: CMakeLists.txt  main.cpp
red_band/ebook/: CMakeLists.txt  main.cpp
red_band/editor/: CMakeLists.txt  main.cpp
red_band/express/: CMakeLists.txt  main.cpp
red_band/final/: CMakeLists.txt  iterator_range.h  main.cpp  parse.cpp  search_server.cpp  search_server.h
red_band/group_string/: CMakeLists.txt  main.cpp
red_band/hotels/: CMakeLists.txt  main.cpp
red_band/joseph_permutation/: CMakeLists.txt  main.cpp
red_band/keywords/: CMakeLists.txt  main.cpp
red_band/learner/: CMakeLists.txt  main.cpp
red_band/linked_list/: CMakeLists.txt  main.cpp
red_band/macros_LOG/: CMakeLists.txt  main.cpp
red_band/matrix_sum/: CMakeLists.txt  main.cpp
red_band/merge_sort/: main.cpp
red_band/object_pool/: CMakeLists.txt  main.cpp
red_band/paginator/: CMakeLists.txt  main.cpp
red_band/priority_collection/: CMakeLists.txt  main.cpp
red_band/refreshing/: CMakeLists.txt  main.cpp
red_band/search_server/: CMakeLists.txt  iterator_range.h  search_server.cpp  search_server.h  search_server.rar
red_band/server_stats/: CMakeLists.txt  stats.cpp  stats.h
red_band/split_into_senteces/: CMakeLists.txt  main.cpp
red_band/sportmen/: CMakeLists.txt  main.cpp
red_band/stackVector/: CMakeLists.txt  stack_vector.h
red_band/student_sort/: CMakeLists.txt  main.cpp
red_band/swap_sort_reverse/: CMakeLists.txt  main.cpp
red_band/synchronized/: CMakeLists.txt  main.cpp
red_band/table/: CMakeLists.txt  main.cpp
red_band/translator/: CMakeLists.txt  main.cpp
red_band/uniq/: CMakeLists.txt  main.cpp
red_band/vector/: CMakeLists.txt  main.cpp  simple_vector.h
yellow_band/Matrix/: main.cpp
yellow_band/Notifier/: CMakeLists.txt  main.cpp
yellow_band/Palindrom_tester/: CMakeLists.txt  main.cpp
yellow_band/Rational_tester/: CMakeLists.txt  main.cpp
yellow_band/Region/: CMakeLists.txt  main.cpp
yellow_band/Sqr/: CMakeLists.txt  main.cpp
yellow_band/TeamTasks/: CMakeLists.txt  main.cpp
yellow_band/all_permutations/: CMakeLists.txt  main.cpp
yellow_band/ariphmetic/: CMakeLists.txt  main.cpp
yellow_band/blocks/: CMakeLists.txt  main.cpp
yellow_band/buses_decomposition/: CMakeLists.txt  bus_manager.cpp  bus_manager.h  buses_decomposition.rar  main.cpp  query.cpp  query.h  responses.cpp  responses.h
yellow_band/char_group/: CMakeLists.txt  main.cpp
yellow_band/demography/: CMakeLists.txt  main.cpp
yellow_band/doge/: CMakeLists.txt  main.cpp
yellow_band/double_merge/: CMakeLists.txt  main.cpp
yellow_band/equation_tester/: CMakeLists.txt  main.cpp
yellow_band/figures/: CMakeLists.txt  main.cpp
yellow_band/final/: CMakeLists.txt  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  test_runner.h
yellow_band/nearest/: CMakeLists.txt  main.cpp
yellow_band/person_tester/: CMakeLists.txt  main.cpp
yellow_band/phone_number/: CMakeLists.txt  phone_number.cpp
yellow_band/rectangle/: CMakeLists.txt  rectangle.h
yellow_band/refactor/: CMakeLists.txt  main.cpp
yellow_band/refstrict/: CMakeLists.txt  main.cpp
yellow_band/remove_duplicates/: CMakeLists.txt  main.cpp
yellow_band/set_greater_iter/: CMakeLists.txt  main.cpp
yellow_band/split_string/: CMakeLists.txt  main.cpp
yellow_band/string_group/: CMakeLists.txt  main.cpp
yellow_band/sum_reverse_sort/: CMakeLists.txt
yellow_band/temperature/: CMakeLists.txt  main.cpp
yellow_band/triple_merge/: CMakeLists.txt  main.cpp
yellow_band/vector_back_iter/: CMakeLists.txt  main.cpp
(+151 files in other folders)
